--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-navigation": "^2.7.1",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
+    "redux-actions": "^2.6.4",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-saga": "^1.0.0",
@@ -26,6 +27,7 @@
     "@types/react-native": "^0.57.28",
     "@types/react-native-navigation": "^2.0.0",
     "@types/react-redux": "^7.0.0",
+    "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.6",
     "@types/remote-redux-devtools": "^0.5.3",
     "babel-jest": "23.6.0",
