--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "native-base": "^2.10.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
-    "react-native-navigation": "^2.7.1",
+    "react-navigation": "^3.0.9",
+    "react-navigation-redux-helpers": "^2.0.9",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
@@ -25,7 +26,7 @@
     "@types/lodash": "^4.14.120",
     "@types/react": "^16.7.18",
     "@types/react-native": "^0.57.28",
-    "@types/react-native-navigation": "^2.0.0",
+    "@types/react-navigation": "^3.0.1",
     "@types/react-redux": "^7.0.0",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.6",
