--- a/native/package.json
+++ b/native/package.json
@@ -9,10 +9,10 @@
   "dependencies": {
     "lodash": "^4.17.11",
     "native-base": "^2.10.0",
-    "react": "16.6.3",
-    "react-native": "0.57.8",
-    "react-navigation": "^3.0.9",
-    "react-navigation-redux-helpers": "^2.0.9",
+    "react": "^16.6.3",
+    "react-native": "^0.59.9",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-navigation": "^3.11.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
@@ -31,9 +31,8 @@
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.6",
     "@types/remote-redux-devtools": "^0.5.3",
-    "babel-jest": "23.6.0",
-    "detox": "^10.0.9",
-    "jest": "^23.6.0",
+    "babel-jest": "^24.8.0",
+    "jest": "^24.8.0",
     "react-test-renderer": "16.6.3",
     "typescript": "^3.2.2"
   },
